tests/regression/error/hw5_error19.nex
anon (a, a) { }(1,1);
